<resources>
    <string name="app_name">BMICalculator</string>
    <string name="enterHeightText">Enter your height in meters:</string>
    <string name="heightInputHint">meters</string>
    <string name="enterWeightText">Enter your weight in kilograms:</string>
    <string name="weightInputHint">kilograms</string>
    <string name="calculateButtonText">Calculate</string>
    <string name="imageViewContentDescription">Image Representation Of Weight Group</string>
    <string name="resultIndexText">30.4</string>
    <string name="obeseTextDescription">Obesity is a leading preventable cause of death worldwide, with increasing rates
        in adults and children. Obesity is mostly preventable through a combination of social changes and personal
        choices. Changes to diet and exercising are the main treatments.
    </string>
    <string name="overweightTextDescription">A 2016 review estimated that the risk of death increases by seven percent
        among overweight people with a BMI of 25 to 27.5 and 20 percent among overweight people with a BMI of 27.5 to
        30. The Framingham heart study found that being overweight at age 40 reduced life expectancy by three years.
        Being overweight also increases the risk of oligospermia and azoospermia in men.
    </string>
    <string name="normalTextDescription">You\'re good. Nothing to complain here. Keep it up.
    </string>
    <string name="underweightTextDescription">Underweight might be secondary to or symptomatic of an underlying disease.
        Unexplained weight loss may require professional medical diagnosis. Underweight can also be a primary causative
        condition. Severely underweight individuals may have poor physical stamina and a weak immune system, leaving
        them open to infection.
    </string>
    <string name="obeseTextTitle">Obese</string>
    <string name="overweightTextTitle">Overweight</string>
    <string name="normalTextTitle">Normal</string>
    <string name="underweightTextTitle">Underweight</string>
    <string name="invalidHeightInput">Invalid height</string>
    <string name="invalidWeightInput">Invalid weight</string>
    <string name="bmiFormatString">%.2f</string>
</resources>
